--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="aboutalign" >
             <div class="boxlogonav">
-                <img src="./images/download.png" class="logonav" alt="">
+                <img src="./images/logo/WhatsApp_Image_2024-02-09_at_12.11.30_30bb053c-removebg-preview.png" class="logonav" width="182vw" alt="">
             </div>
             <ul class="ulist">
                 <li><a href="index.html" class="linknav " style="color: antiquewhite;">Home</a></li>
