--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yash Travel Co. - Your Gateway to the World</title>
+    <title>Dream Destinations - Your Gateway to the World</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="./images/favicon/icons8-travel-portal-16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon/WhatsApp_Image_2024-02-09_at_11.10.42_256b7202-removebg-preview.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,800&display=swap"
@@ -23,7 +22,7 @@
     <header>
         <nav class="navbar">
             <div class="boxlogonav">
-                <img src="./images/download.png" class="logonav" alt="">
+                <img src="./images/logo/WhatsApp_Image_2024-02-09_at_12.11.30_30bb053c-removebg-preview.png" class="logonav" width="182vw" alt="">
             </div>
             <ul class="ulist">
                 <li><a href="index.html" class="linknav ">Home</a></li>
@@ -61,7 +60,34 @@
                 </div>
             </div>
         </div>
-        <div class="optionsmain">
+        <div class="animatetext">
+            <span class=".animatemove"><a href="#slide" class="removeline">Click & Go Adventures &#9992;</a></span>
+        </div>
+        <!-- <div class="comunitycontainer">
+            <div class="comunityheadingcontainer">
+                <h1>My Community</h2>
+            </div>
+            <div class="circle-container">
+                <div class="circle">
+                  <div class="fill"></div>
+                  <div class="percentage">60%</div>
+                  <p class="seecomunity">Students</p>
+                </div>
+                <div class="circle">
+                  <div class="fill" style="background: conic-gradient(#D24545 0% 25%, #E6BAA3 25% 100%);"></div>
+                  <div class="percentage">25%</div>
+                  <p class="seecomunity">Employees</p>
+                </div>
+                <div class="circle">
+                  <div class="fill" style="background: conic-gradient(#D24545 0% 15%, #E6BAA3 15% 100%);"></div>
+                  <div class="percentage">15%</div>
+                  <p class="seecomunity">Teachers</p>
+                </div>
+              </div>
+            
+            
+        </div> -->
+        <div class="optionsmain" id="slide">
             <div class="box" id="past">
                 <div class="imageoption">
                     <img src="./images/options/photo-1512704515581-de233a09dae8.jpg" alt="">
