--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="aboutalign" >
             <div class="boxlogonav">
-                <img src="./images/download.png" class="logonav" alt="">
+                <img src="./images/logo/WhatsApp_Image_2024-02-09_at_12.11.30_30bb053c-removebg-preview.png" width="182vw" class="logonav" alt="">
             </div>
             <ul class="ulist" style="background-color: black;">
                 <li><a href="index.html" class="linknav  " style="color: white;">Home</a></li>
